--- a/style.css
+++ b/style.css
@@ -4,17 +4,61 @@ body {
     background-color: #f1f3f5;
 }
 
+.main-container {
+    display: flex;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    flex-flow: column;
+}
+
+.main-name {
+    margin-left: 5px;
+    font-weight: 500;
+    font-size: 28px;
+    color: #343a40;
+}
+
 .sidebar {
     min-height: 100vh;
+    width: 300px;
+    flex: 0 0 300px;
     background-color: #343a40;
     color: white;
     padding-top: 1rem;
+    overflow: hidden;
+}
+
+.sidebar-button {
+    font-size: 30px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    margin-top: 10px;
+}
+
+/*chatgbt*/
+#sidebar.active {
+    display: block;
+    position: absolute;
+    top: 60px;
+    /* Hamburger buton yüksekliği kadar boşluk bırak */
+    left: 0;
+    width: 75%;
+    z-index: 999;
+}
+
+.content-area {
+    width: auto;
+    max-width: 100%;
+    flex: 0 0 auto;
+    overflow: hidden;
 }
 
 .sidebar h4 {
-    color: #fff;
+    color: white;
     text-align: center;
     margin-bottom: 2rem;
+    display: none;
 }
 
 .sidebar .nav-link {
@@ -36,12 +80,41 @@ body {
     padding: 2rem;
 }
 
-.doctor-info {
-    position: absolute;
-    width: 20vh;
-    height: 6vh;
-    top: 20px;
-    right: 30px;
-    background-color: aqua;
-    margin: 5px;
+.menu-text {
+    color: rgb(75, 75, 255);
+}
+
+@media screen and (max-width: 768px) {
+    .navbar {
+        display: none;
+    }
+
+    .sidebar h4 {
+        display: block;
+    }
+
+    .sidebar {
+        display: none;
+    }
+}
+
+@media screen and (max-width:992px) {
+
+    .right-elements {
+        display: none !important;
+    }
+
+    .nav-item {
+        display: block !important;
+    }
+}
+
+.right-icons {
+    font-size: 20px;
+    color: #343a40;
+}
+
+.right-font {
+    color: #343a40;
+    font-weight: 500;
 }
