--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #f1f3f5;
+    background: #eef3f7;
 }
 
 .main-container {
@@ -12,21 +12,66 @@ body {
     flex-flow: nowrap;
 }
 
+.navbar {
+    position: top;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 85%;
+    /* ya da sabit: 400px gibi */
+    z-index: 1050;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
 .main-name {
     margin-left: 5px;
     font-weight: 500;
-    font-size: 28px;
+    font-size: 21px;
     color: #343a40;
+}
+
+.custom-btn {
+    width: 140px;
+    height: 35px;
+    padding: 4px;
+    border: 2px solid #0021db;
+    border-radius: 2px;
+}
+
+.custom-btn:hover {
+    border: 2px solid rgb(18, 163, 220);
+    transition-duration: 0.5s;
+}
+
+.custom-btn:hover span,
+.custom-btn:hover i {
+    color: rgb(18, 163, 220);
+    transition-duration: 0.5s;
+}
+
+.right-icons {
+    font-size: 14px;
+    color: #343a40;
+}
+
+.right-font {
+    color: #343a40;
+    font-weight: 500;
+    font-size: 14px;
 }
 
 .sidebar {
     min-height: 100vh;
     width: 300px;
+    margin-top: 10px;
     flex: 0 0 300px;
-    background-color: #343a40;
+    background-color: #0021db;
     color: white;
     padding-top: 1rem;
     overflow: hidden;
+    border-top-right-radius: 5px;
+    box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .sidebar-button {
@@ -65,7 +110,7 @@ body {
 
 .sidebar .nav-link:hover,
 .sidebar .nav-link.active {
-    background-color: #495057;
+    background-color: rgba(255, 255, 255, 0.3);
     color: white;
 }
 
@@ -73,13 +118,14 @@ body {
     margin-right: 10px;
 }
 
+.nav-item a {
+    font-size: 14px;
+}
+
 .content {
     padding: 2rem;
 }
 
-.menu-text {
-    color: rgb(75, 75, 255);
-}
 
 @media screen and (max-width: 768px) {
     .navbar {
@@ -97,6 +143,7 @@ body {
         height: 100%;
         top: 0;
         left: 0;
+        border-top-right-radius: 0;
     }
 
     .sidebar.active {
@@ -121,14 +168,4 @@ body {
     .nav-item {
         display: block !important;
     }
-}
-
-.right-icons {
-    font-size: 20px;
-    color: #343a40;
-}
-
-.right-font {
-    color: #343a40;
-    font-weight: 500;
 }
